Temporarily comment out the static 1020px widths and tracks/asset 420 widths that were stopping content collapse

--- a/app/assets/stylesheets/white_theme/header.scss
+++ b/app/assets/stylesheets/white_theme/header.scss
@@ -4,7 +4,7 @@
 
 .header_inner {
   position: relative;
-  width: 1020px;
+  // width: 1020px;
   margin-right: auto;
   margin-left: auto;
 }
